// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TripleComboItem/> should render with different props 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-9 MuiListItem-root makeStyles-root-1 MuiListItem-gutters MuiListItem-alignItemsFlexStart makeStyles-root-8"
  >
    <div
      class="MuiListItemText-root makeStyles-textRoot-4 makeStyles-textRoot-7 MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-3 makeStyles-primaryText-6 MuiTypography-body1 MuiTypography-displayBlock"
      >
        Something
      </span>
      <p
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </p>
    </div>
  </div>
</div>
`;

exports[`<TripleComboItem/> should render with different props 2`] = `
<div>
  <li
    class="MuiListItem-root makeStyles-root-1 MuiListItem-gutters MuiListItem-alignItemsFlexStart"
  >
    <div
      class="MuiListItemText-root makeStyles-textRoot-4 makeStyles-textRoot-12 MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-3 makeStyles-primaryText-11 MuiTypography-body1 MuiTypography-displayBlock"
      >
        Something
      </span>
      <p
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </p>
    </div>
  </li>
</div>
`;

exports[`<TripleComboItem/> should render with different props 3`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-16 MuiListItem-root makeStyles-root-1 MuiListItem-gutters MuiListItem-alignItemsFlexStart makeStyles-root-8"
  >
    <div
      class="MuiListItemText-root makeStyles-textRoot-4 makeStyles-textRoot-15"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-3 makeStyles-primaryText-14 MuiTypography-body1 MuiTypography-displayBlock"
      >
        Something
      </span>
    </div>
  </div>
</div>
`;

exports[`<TripleComboItem/> should render with different props 4`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-20 MuiListItem-root makeStyles-root-1 MuiListItem-gutters MuiListItem-alignItemsFlexStart makeStyles-root-8"
  >
    <div
      class="makeStyles-image-2 makeStyles-image-17"
    />
    <div
      class="MuiListItemText-root makeStyles-textRoot-4 makeStyles-textRoot-19 MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-3 makeStyles-primaryText-18 MuiTypography-body1 MuiTypography-displayBlock"
      >
        Something
      </span>
      <p
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </p>
    </div>
  </div>
</div>
`;

exports[`<TripleComboItem/> should render with different props 5`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-24 MuiListItem-root makeStyles-root-1 MuiListItem-gutters MuiListItem-alignItemsFlexStart makeStyles-root-8"
  >
    <div
      class="makeStyles-image-2 makeStyles-image-21"
    />
    <div
      class="MuiListItemText-root makeStyles-textRoot-4 makeStyles-textRoot-23 MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-3 makeStyles-primaryText-22 MuiTypography-body1 MuiTypography-displayBlock"
      >
        Something
      </span>
      <p
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </p>
    </div>
  </div>
</div>
`;
